--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="../img/lasagna.jpg" width="1000px">
+        <img src="../img/lasagna.jpg" width="512px" height="auto">
 
         <h2>Description</h2>
         <p>A quick and easy beef lasagne that's extra cheesy and ready to eat in just 1 hour! And best of all, a time saver, as there's absolutely no need to make a bechamel sauce! The perfect midweek family dinner.</p>
