--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,11 @@
     <head>
         <title>Lasagna</title>
         <meta charset="utf-8", content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="../img/lasagna.jpg" width="512px" height="auto">
+        <img src="../img/lasagna.jpg">
 
         <h2>Description</h2>
         <p>A quick and easy beef lasagne that's extra cheesy and ready to eat in just 1 hour! And best of all, a time saver, as there's absolutely no need to make a bechamel sauce! The perfect midweek family dinner.</p>
