--- a/recipes/nabeyaki-udon.html
+++ b/recipes/nabeyaki-udon.html
@@ -3,6 +3,7 @@
     <head>
         <title>Nabeyaki Udon</title>
         <meta charset="utf-8" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Nabeyaki Udon</h1>
