--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -3,6 +3,7 @@
     <head>
         <title>Sushi</title>
         <meta charset="utf-8" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Sushi</h1>
